--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -16,10 +16,10 @@
         <Button layoutX="831.0" layoutY="861.0" mnemonicParsing="false" onAction="#logOff" text="Log off" />
         <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
         <DialogPane layoutX="93.0" layoutY="177.0" prefHeight="654.0" prefWidth="700.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
-        <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
+        <Button fx:id="buttonCerca" layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
         <ComboBox fx:id="comboBoxRicerca" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
         <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" text="Mostra" />
-        <TableView fx:id="libroTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="libroTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="isbnLibro" prefWidth="95.9999771118164" text="ISBN" />
                 <TableColumn fx:id="titoloLibro" prefWidth="300.6666717529297" text="Titolo" />
@@ -45,7 +45,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="articoloTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="articoloTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="doiArticolo" prefWidth="300.6666717529297" text="doi" />
                 <TableColumn fx:id="titoloArticolo" prefWidth="104.66671752929688" text="Titolo" />
@@ -70,7 +70,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="acquistoTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="acquistoTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codaAcquisto" prefWidth="95.9999771118164" text="CodA" />
                 <TableColumn fx:id="nomeAcquisto" prefWidth="300.6666717529297" text="Nome" />
@@ -87,7 +87,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="conferenzaTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="conferenzaTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codcConferenza" prefWidth="95.9999771118164" text="CodC" />
                 <TableColumn fx:id="nomeConfernza" prefWidth="300.6666717529297" text="Nome" />
@@ -106,7 +106,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="presentazioneTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="presentazioneTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codpPresentazione" prefWidth="95.9999771118164" text="CodP" />
                 <TableColumn fx:id="nomePresentazione" prefWidth="300.6666717529297" text="Nome" />
@@ -123,7 +123,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="rivistaTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="rivistaTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="nomeRivista" prefWidth="95.9999771118164" text="Nome" />
                 <TableColumn fx:id="dataRivista" prefWidth="300.6666717529297" text="Data" />
@@ -139,13 +139,12 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="serieTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="serieTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codsSerie" prefWidth="95.9999771118164" text="CodS" />
-                <TableColumn fx:id="nomeSerie" prefWidth="300.6666717529297" text="Titolo" />
-                <TableColumn fx:id="indirizzoSerie" prefWidth="104.66671752929688" text="Autore" />
-                <TableColumn fx:id="dataSerie" prefWidth="105.33331298828125" text="Data" />
-                <TableColumn fx:id="tipoSerie" prefWidth="75.3333740234375" text="Tipo" />
+                <TableColumn fx:id="nomeSerie" prefWidth="300.6666717529297" text="Nome" />
+                <TableColumn fx:id="numLibriSerie" prefWidth="104.66671752929688" text="NumeroLibri" />
+                <TableColumn fx:id="completataSerie" prefWidth="105.33331298828125" text="Completata" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -156,7 +155,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="utenteTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="utenteTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="emailUtente" prefWidth="95.9999771118164" text="CodS" />
                 <TableColumn fx:id="passwordUtente" prefWidth="300.6666717529297" text="Password" />
@@ -173,7 +172,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="disponibileATableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="disponibileATableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codaDisponibileA" prefWidth="95.9999771118164" text="CodAcquisto" />
                 <TableColumn fx:id="doiDisponibileA" prefWidth="300.6666717529297" text="Doi" />
@@ -187,7 +186,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="disponibileLTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="disponibileLTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codaDisponibileL" prefWidth="95.9999771118164" text="CodAcquisto" />
                 <TableColumn fx:id="isbnDisponibileL" prefWidth="300.6666717529297" text="Isbn" />
@@ -201,7 +200,7 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
-        <TableView fx:id="disponibileSTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
+        <TableView fx:id="disponibileSTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="codaDisponibileS" prefWidth="95.9999771118164" text="CodAcquisto" />
                 <TableColumn fx:id="codsDisponibileS" prefWidth="300.6666717529297" text="CodSerie" />
