--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -28,19 +28,19 @@
         <ComboBox fx:id="comboBoxRicerca" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
         <TableView fx:id="libroTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="isbnLibro" onEditCommit="#onEditChangedLibroString" prefWidth="95.9999771118164" text="ISBN" />
-                <TableColumn fx:id="titoloLibro" onEditCommit="#onEditChangedLibroString" prefWidth="300.6666717529297" text="Titolo" />
-                <TableColumn fx:id="genereLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Genere" />
-                <TableColumn fx:id="numPagineLibro" onEditCommit="#onEditChangedLibroInt" prefWidth="104.66671752929688" text="NumeroPagine" />
-                <TableColumn fx:id="materiaLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Materia" />
-                <TableColumn fx:id="descrizioneLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Descrizione" />
-                <TableColumn fx:id="fruizioneLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Fruizione" />
-                <TableColumn fx:id="editoreLibro" onEditCommit="#onEditChangedLibroString" prefWidth="105.33331298828125" text="Editore" />
-                <TableColumn fx:id="autoreLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Autore" />
-                <TableColumn fx:id="dataUscitaLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="DataUscita" />
-                <TableColumn fx:id="successivoLibro" onEditCommit="#onEditChangedLibroString" prefWidth="104.66671752929688" text="Successivo" />
-                <TableColumn fx:id="serieLibro" onEditCommit="#onEditChangedLibroInt" prefWidth="104.66671752929688" text="Serie" />
-                <TableColumn fx:id="presentazioneLibro" onEditCommit="#onEditChangedLibroInt" prefWidth="104.66671752929688" text="Presentazione" />
+                <TableColumn fx:id="isbnLibro" editable="false" onEditCommit="#onEditChangedString" prefWidth="95.9999771118164" text="ISBN" />
+                <TableColumn fx:id="titoloLibro" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Titolo" />
+                <TableColumn fx:id="genereLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Genere" />
+                <TableColumn fx:id="numPagineLibro" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="NumeroPagine" />
+                <TableColumn fx:id="materiaLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Materia" />
+                <TableColumn fx:id="descrizioneLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Descrizione" />
+                <TableColumn fx:id="fruizioneLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Fruizione" />
+                <TableColumn fx:id="editoreLibro" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Editore" />
+                <TableColumn fx:id="autoreLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Autore" />
+                <TableColumn fx:id="dataUscitaLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="DataUscita" />
+                <TableColumn fx:id="successivoLibro" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Successivo" />
+                <TableColumn fx:id="serieLibro" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Serie" />
+                <TableColumn fx:id="presentazioneLibro" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Presentazione" />
 
             </columns>
             <contextMenu>
@@ -55,19 +55,19 @@
         </TableView>
         <TableView fx:id="articoloTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="doiArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="300.6666717529297" text="doi" />
-                <TableColumn fx:id="titoloArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="Titolo" />
-                <TableColumn fx:id="genereArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="genere" />
-                <TableColumn fx:id="numPagineArticolo" onEditCommit="#onEditChangedArticoloScientificoInt" prefWidth="104.66671752929688" text="NumeroPagine" />
-                <TableColumn fx:id="dataUscitaArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="DataUscita" />
-                <TableColumn fx:id="descrizioneArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="Descrizione" />
-                <TableColumn fx:id="fruizioneArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="Fruizione" />
-                <TableColumn fx:id="editoreArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="105.33331298828125" text="Editore" />
-                <TableColumn fx:id="autoreArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="Autore" />
-                <TableColumn fx:id="linguaArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="Lingua" />
-                <TableColumn fx:id="conferenzaArticolo" onEditCommit="#onEditChangedArticoloScientificoInt" prefWidth="104.66671752929688" text="Conferenza" />
-                <TableColumn fx:id="nomerArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="NomeRivista" />
-                <TableColumn fx:id="datarArticolo" onEditCommit="#onEditChangedArticoloScientificoString" prefWidth="104.66671752929688" text="DataRivista" />
+                <TableColumn fx:id="doiArticolo" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="doi" />
+                <TableColumn fx:id="titoloArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Titolo" />
+                <TableColumn fx:id="genereArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="genere" />
+                <TableColumn fx:id="numPagineArticolo" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="NumeroPagine" />
+                <TableColumn fx:id="dataUscitaArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="DataUscita" />
+                <TableColumn fx:id="descrizioneArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Descrizione" />
+                <TableColumn fx:id="fruizioneArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Fruizione" />
+                <TableColumn fx:id="editoreArticolo" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Editore" />
+                <TableColumn fx:id="autoreArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Autore" />
+                <TableColumn fx:id="linguaArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Lingua" />
+                <TableColumn fx:id="conferenzaArticolo" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="Conferenza" />
+                <TableColumn fx:id="nomerArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="NomeRivista" />
+                <TableColumn fx:id="datarArticolo" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="DataRivista" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -81,11 +81,11 @@
         </TableView>
         <TableView fx:id="acquistoTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="codaAcquisto" onEditCommit="#onEditChangedAcquistoInt" prefWidth="95.9999771118164" text="CodA" />
-                <TableColumn fx:id="nomeAcquisto" onEditCommit="#onEditChangedAcquistoString" prefWidth="300.6666717529297" text="Nome" />
-                <TableColumn fx:id="tipoAcquisto" onEditCommit="#onEditChangedAcquistoString" prefWidth="104.66671752929688" text="Tipo" />
-                <TableColumn fx:id="urlAcquisto" onEditCommit="#onEditChangedAcquistoString" prefWidth="105.33331298828125" text="Url" />
-                <TableColumn fx:id="indirizzoAcquisto" onEditCommit="#onEditChangedAcquistoString" prefWidth="75.3333740234375" text="Indirizzo" />
+                <TableColumn fx:id="codaAcquisto" onEditCommit="#onEditChangedInt" prefWidth="95.9999771118164" text="CodA" />
+                <TableColumn fx:id="nomeAcquisto" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Nome" />
+                <TableColumn fx:id="tipoAcquisto" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Tipo" />
+                <TableColumn fx:id="urlAcquisto" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Url" />
+                <TableColumn fx:id="indirizzoAcquisto" onEditCommit="#onEditChangedString" prefWidth="75.3333740234375" text="Indirizzo" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -99,13 +99,13 @@
         </TableView>
         <TableView fx:id="conferenzaTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="codcConferenza" onEditCommit="#onEditChangedConferenzaInt" prefWidth="95.9999771118164" text="CodC" />
-                <TableColumn fx:id="nomeConfernza" onEditCommit="#onEditChangedConferenzaString" prefWidth="300.6666717529297" text="Nome" />
-                <TableColumn fx:id="strutturaConferenza" onEditCommit="#onEditChangedConferenzaString" prefWidth="104.66671752929688" text="Struttura" />
-                <TableColumn fx:id="indirizzoConferenza" onEditCommit="#onEditChangedConferenzaString" prefWidth="105.33331298828125" text="Indirizzo" />
-                <TableColumn fx:id="dataiConferenza" onEditCommit="#onEditChangedConferenzaString" prefWidth="105.33331298828125" text="DataInizio" />
-                <TableColumn fx:id="datafConferenza" onEditCommit="#onEditChangedConferenzaString" prefWidth="105.33331298828125" text="DataFine" />
-                <TableColumn fx:id="responsabileConferenza" onEditCommit="#onEditChangedConferenzaString" prefWidth="105.33331298828125" text="Responsabile" />
+                <TableColumn fx:id="codcConferenza" onEditCommit="#onEditChangedInt" prefWidth="95.9999771118164" text="CodC" />
+                <TableColumn fx:id="nomeConfernza" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Nome" />
+                <TableColumn fx:id="strutturaConferenza" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Struttura" />
+                <TableColumn fx:id="indirizzoConferenza" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Indirizzo" />
+                <TableColumn fx:id="dataiConferenza" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="DataInizio" />
+                <TableColumn fx:id="datafConferenza" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="DataFine" />
+                <TableColumn fx:id="responsabileConferenza" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Responsabile" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -119,11 +119,11 @@
         </TableView>
         <TableView fx:id="presentazioneTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="codpPresentazione" onEditCommit="#onEditChangedPresentazioneInt" prefWidth="95.9999771118164" text="CodP" />
-                <TableColumn fx:id="nomePresentazione" onEditCommit="#onEditChangedPresentazioneString" prefWidth="300.6666717529297" text="Nome" />
-                <TableColumn fx:id="indirizzoPresentazione" onEditCommit="#onEditChangedPresentazioneString" prefWidth="104.66671752929688" text="Indirizzo" />
-                <TableColumn fx:id="dataPresentazione" onEditCommit="#onEditChangedPresentazioneString" prefWidth="105.33331298828125" text="Data" />
-                <TableColumn fx:id="tipoPresentazione" onEditCommit="#onEditChangedPresentazioneString" prefWidth="75.3333740234375" text="Tipo" />
+                <TableColumn fx:id="codpPresentazione" onEditCommit="#onEditChangedInt" prefWidth="95.9999771118164" text="CodP" />
+                <TableColumn fx:id="nomePresentazione" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Nome" />
+                <TableColumn fx:id="indirizzoPresentazione" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Indirizzo" />
+                <TableColumn fx:id="dataPresentazione" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Data" />
+                <TableColumn fx:id="tipoPresentazione" onEditCommit="#onEditChangedString" prefWidth="75.3333740234375" text="Tipo" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -137,10 +137,10 @@
         </TableView>
         <TableView fx:id="rivistaTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="nomeRivista" onEditCommit="#onEditChangedRivistaString" prefWidth="95.9999771118164" text="Nome" />
-                <TableColumn fx:id="dataRivista" onEditCommit="#onEditChangedRivistaString" prefWidth="300.6666717529297" text="Data" />
-                <TableColumn fx:id="responsabileRivista" onEditCommit="#onEditChangedRivistaString" prefWidth="104.66671752929688" text="Responsabile" />
-                <TableColumn fx:id="argomentoRivista" onEditCommit="#onEditChangedRivistaString" prefWidth="105.33331298828125" text="Argomento" />
+                <TableColumn fx:id="nomeRivista" onEditCommit="#onEditChangedString" prefWidth="95.9999771118164" text="Nome" />
+                <TableColumn fx:id="dataRivista" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Data" />
+                <TableColumn fx:id="responsabileRivista" onEditCommit="#onEditChangedString" prefWidth="104.66671752929688" text="Responsabile" />
+                <TableColumn fx:id="argomentoRivista" onEditCommit="#onEditChangedString" prefWidth="105.33331298828125" text="Argomento" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -154,10 +154,10 @@
         </TableView>
         <TableView fx:id="serieTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="codsSerie" onEditCommit="#onEditChangedSerieInt" prefWidth="95.9999771118164" text="CodS" />
-                <TableColumn fx:id="nomeSerie" onEditCommit="#onEditChangedSerieString" prefWidth="300.6666717529297" text="Nome" />
-                <TableColumn fx:id="numLibriSerie" onEditCommit="#onEditChangedSerieInt" prefWidth="104.66671752929688" text="NumeroLibri" />
-                <TableColumn fx:id="completataSerie" onEditCommit="#onEditChangedSerieBool" prefWidth="105.33331298828125" text="Completata" />
+                <TableColumn fx:id="codsSerie" onEditCommit="#onEditChangedInt" prefWidth="95.9999771118164" text="CodS" />
+                <TableColumn fx:id="nomeSerie" onEditCommit="#onEditChangedString" prefWidth="300.6666717529297" text="Nome" />
+                <TableColumn fx:id="numLibriSerie" onEditCommit="#onEditChangedInt" prefWidth="104.66671752929688" text="NumeroLibri" />
+                <TableColumn fx:id="completataSerie" onEditCommit="#onEditChangedBool" prefWidth="105.33331298828125" text="Completata" />
             </columns>
             <contextMenu>
                 <ContextMenu>
